// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input snapshot renders 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInput-root-33 RawInput-inputRoot-3 MuiInput-formControl-34 MuiInput-underline-37"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-41"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders alignment 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInput-root-79 RawInput-inputRoot-3 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-87 RawInput-right-8 RawInput-size4-13"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders correct feedback 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInput-root-53 RawInput-inputRoot-3 MuiInput-formControl-54 MuiInput-underline-57"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-61"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
    <div
      className="RawInput-icon-7"
    >
      <div>
        Correct
      </div>
    </div>
  </div>
  <div>
    Feedback
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders disabled 1`] = `
<div
  className="MuiFormControl-root-29 RawInput-formControl-2"
>
  <div
    className="RawInput-inputAndIcon-6"
  >
    <div
      className="RawInput-inputWrapper-4"
    >
      <div
        className="MuiInput-root-66 RawInput-inputRoot-3 MuiInput-disabled-69 MuiInput-formControl-67 MuiInput-underline-70"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-74 MuiInput-disabled-69"
          defaultValue={undefined}
          disabled={true}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="hi"
        />
      </div>
      <div
        className="RawInput-hiddenText-5"
      >
        hi
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-disabled-48 MuiFormHelperText-filled-51"
  >
    
  </p>
</div>
`;
